# diamondhacks

./: .env.example  .gitignore  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  render.yaml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/done/: page.tsx
app/join/[id]/: page.tsx
app/pay/setup/[token]/: page.tsx
backend/: main.py  pyproject.toml  requirements.txt  setup_agent.py  test_booking.py
backend/agents/: __init__.py  activity_search_uagent.py  booking_uagent.py  browser_runner.py  browser_schemas.py  consensus.py  fetch_browser_agents.py  friend_profile.py  mock_orchestrator.py  orchestrator.py  stripe_agent.py
backend/api/: __init__.py
backend/api/webhooks/: twilio_webhook.py
backend/messaging/: asi_one.py  conversation.py  twilio_service.py
backend/models/: profiles.py
backend/profiles/: alex.json  jordan.json  mike.json  riley.json  sarah.json
backend/services/: llm_service.py  stripe_service.py
components/: SpinnerIcon.tsx
scripts/: backend-dev.mjs
utils/: types.ts
